Improved Image Quality, Removed Newsletter Text-Field, Author and Category  Displayed, and Homepage Blog Cards errors fixed, GPU Testnet end date changed  (#189)
* Refactored code to update the page title and banner link. Applied light color to the header and paragraph description( 3 groups ) for improved visibility on mobile screens in dark mode.

* Style: Applied light color to the header text and paragraph description( 3 groups ) for improved visibility on larger  screens in dark mode.

Style:  added hovers to Buttons in GPU-Testnet Page and refactored some of the css ro make it readable.

* 1. Reduced width of the main titles to prevent text overlaps.

2.Updated the top-level red link banner to open a new tab when the user clicks.

* Style: refactored the css file to make it organize and readable.

* GPU-Testnet Page Update: Date updated from "June 12, 2023 - Ends: July 3rd, 2023" to "June 20th, 2023 - Ends: July 11th, 2023 "
1. GPU docs links added successfuly,
2. kyc guideline button removed. 3. Gpu table caption and horizontal line  removed.
4.Updated the introductory text to provide a clearer description of the open-source marketplace for GPU compute.

* Style: Space added  around the GPU Models (top, left, bottom).

* 1. Fixed font issue on the community page for dark mode
2. Updated GPU docs link

* Styles: Refactored the css in dark mode to make it readable

* Updated Token page: added SVG illustrations and implemented new design layout

* merge remote tracking

* Updated Hugo image processor and increased blog image quality by 95. Added styling to blog header

* update

* Blog page improved, update on homepage blog section cards

* Refactored the css to make it readable

* Style: added  a font-size to bog-title

* feat(section): Added scroll interactions to the 3 groups sections

* Update _pages.scss

Refactored the css code to make it readable


* Update _dark.scss

Refactored the _dark.css code to make it

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -55,12 +55,11 @@
     padding-bottom: 0.25rem;
   }
 
-  .nav_wrap{
+  .nav_wrap {
     display: flex;
   }
 
-
-  .nav_wrap li{
+  .nav_wrap li {
     justify-content: center;
     align-items: center;
     position: relative;
@@ -272,8 +271,6 @@ nav {
   width: 100%;
 }
 
-
-
 /*
 @include media-breakpoint-up(lg) {
   .navbar-form {
@@ -348,11 +345,15 @@ nav {
     width: auto !important;
   }
 
-  .algolia-autocomplete .algolia-docsearch-suggestion .algolia-docsearch-suggestion--subcategory-column {
+  .algolia-autocomplete
+    .algolia-docsearch-suggestion
+    .algolia-docsearch-suggestion--subcategory-column {
     font-weight: normal;
   }
 
-  .algolia-autocomplete .algolia-docsearch-suggestion .algolia-docsearch-suggestion--subcategory-column::after {
+  .algolia-autocomplete
+    .algolia-docsearch-suggestion
+    .algolia-docsearch-suggestion--subcategory-column::after {
     content: "/";
     margin-right: 0.25rem;
   }
@@ -458,6 +459,8 @@ nav {
   border: transparent;
 }
 
+// 1041-1398
+
 .btn-doks-light {
   border: transparent;
 }
@@ -532,20 +535,14 @@ nav {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
   }
+}
 
+.d-wrap_dark a .disc {
+  display: none !important;
+}
+
+@media screen and (min-width: 992px) and (max-width: 1040px) {
+  .nav_wrap li {
+    left: 70px;
   }
-
-  .d-wrap_dark a .disc{
-    display: none !important;
-  }
-
-
-
-  @media screen and (min-width: 992px) and (max-width: 1040px) {
-    .nav_wrap li{
-      left: 70px;
-    }
-  }
-
-
-
+}
